--- a/templates/invoice/create.html.twig
+++ b/templates/invoice/create.html.twig
@@ -2,22 +2,52 @@
 {% block title %} Create Invoice {% endblock %}
 
 {% block body %}
+    <div class="container mt-5">
+        {{ form_start(form) }}
 
-    <div class="container py-5">
         <div class="row">
+
             <div class="col-md-6">
                 <div class="card border-secondary">
                     <div class="card-header">
-                        <h6 class=" my-2 center">Invoice</h6>
+                        <h6 class="my-2 center">Invoice</h6>
                     </div>
+
                     <div class="card-body">
 
-                        {{ form_start(form) }}
+                        <table id="{{ form.vars.id }}"
+                               class="items table table-bordered center"
+                               data-prototype="{{ include('invoice/form_prototype.html.twig',
+                                   {'form': form.invoiceDetails.vars.prototype })|e('html_attr') }}">
+
+                            <thead>
+                            <tr>
+                                <th scope="col">Product</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Qty.</th>
+                                <th scope="col">Total</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+
+                            {% for detail in form.invoiceDetails %}
+
+                                <tr id="product">
+                                    {% include('invoice/form_prototype.html.twig')  with {form: item} %}
+                                </tr>
+
+                            {% endfor %}
+                            </tbody>
+                        </table>
+
+                        <button id="more" type="button" class="btn btn-success mb-3"><i class="fa fa-plus"></i></button>
+
                         {{ form_row(form.billNumber) }}
                         {{ form_row(form.billDate) }}
                         {{ form_row(form.customer) }}
 
-                        {{ form_row(form.subtotal) }}
                         <div class="form-group">
 
                             <div class="row">
@@ -57,7 +87,6 @@
                 </div>
             </div>
 
-
             <div class="col-md-6">
                 <div class="card border-secondary">
                     <div class="card-header">
@@ -65,11 +94,7 @@
                     </div>
                     <div class="card-body">
 
-
-
-
-
-
+                        {{ form_row(form.subtotal) }}
                         {{ form_row(form.remarks) }}
 
                         <div class="form-group">
@@ -81,108 +106,62 @@
                             <label for="inputName">Change</label>
                             <input type="text" class="form-control" id="inputName">
                         </div>
-                        <div class="row ml-2">
-                            <div class="col-xs-3">
-                                <div class="form-group">
 
-                                    {{ form_row(form.Submit) }}
+                            {{ form_row(form.Submit) }}
 
-                                </div>
-                            </div>
-                            <div class="col-xs-3  ml-3">
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-danger float-right"><i
-                                                class="fa fa-print"></i> Print
-                                    </button>
-
-                                </div>
-                            </div>
-
-
-                        </div>
-                        {{ form_end(form) }}
                     </div>
                 </div>
+
             </div>
 
-
-            <div class="col-md-6 mt-3">
-                <div class="card border-secondary">
-                    <div class="card-header">
-                        <h6 class=" my-2 center">Product Info</h6>
-                    </div>
-                    <div class="card-body">
-                        <div class="form-group">
-                            <label for="inputName">Product Name</label>
-                            <div class="input-group mb-3">
-                                <select class="custom-select" name="" id="inputGroupSelect02">
-                                    <option selected>Choose...</option>
-                                    {% for product in products %}
-                                        <option value="1">{{ product.name }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="inputName">Unit Price</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Unit Price">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="inputName">Quantity</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Quantity">
-                        </div>
-
-                        <div class="form-group">
-                            <label for="inputName">Total Amount</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Total Amount">
-                        </div>
-
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-success float-right">Add</button>
-                        </div>
-
-
-                        <div class="row pt-5">
-                            <table class="table table-bordered ml-5">
-                                <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">P.Name</th>
-                                    <th scope="col">U.Price</th>
-                                    <th scope="col">Qty.</th>
-                                    <th scope="col">T.Amount</th>
-                                    <th scope="col">Action</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-
-                                <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>Otto</td>
-                                    <td>Otto</td>
-                                    <td>
-                                        <a href="" style="color: red"
-                                           onclick="return confirm('Are you sure you want to delete this item?');">
-                                            <i class="fa fa-trash ml-4"></i> </a>
-                                    </td>
-                                </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
+
+        {{ form_end(form) }}
 
     </div>
 
-
-
 {% endblock %}
+
 {% block javascripts %}
+    <script>
+
+        var $collectionHolder;
+        var $addItemButton = $('#more');
+
+        function addItemForm($collectionHolder) {
+            var prototype = $collectionHolder.data('prototype');
+            var index = $collectionHolder.data('index');
+            var newForm = prototype;
+
+            newForm = newForm.replace(/__name__/g, index);
+
+            $collectionHolder.data('index', index + 1);
+            $collectionHolder.append($('<tr></tr>').append(newForm));
+        }
+
+
+        {% block document_ready %}
+        {{ parent() }}
+        $collectionHolder = $('table.items');
+        $collectionHolder.data('index', $collectionHolder.find(':input').length);
+
+        $addItemButton.on('click', function (e) {
+            addItemForm($collectionHolder);
+        });
+
+        if ($collectionHolder.find('tr').length == 1) {
+            $addItemButton.click();
+        }
+        {% endblock %}
+
+    </script>
+
+    {#remove product item#}
+
+    <script>
+        $('table').on('click', 'input[type="button"]', function(e){
+            $(this).closest('tr').remove()
+        })
+    </script>
+
 {% endblock %}
