--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,8 +63,14 @@
                     <a class="dropdown-item" href="{{ url('settings_new') }}">Add Settings</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link btn btn-danger" href="{{ url('invoice_create') }}">Create Invoice</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">Invoice</a>
+                <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url('invoice_list') }}">List Invoice</a>
+                    <a class="dropdown-item" href="{{ url('invoice_create') }}">Add Invoice</a>
+                </div>
             </li>
 
             <li class="nav-item">
